# AdaDR_forked

./: .gitignore  README.md  create_dgl_env.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
AdaDR/: data.py  drug_train.py  layers.py
AdaDR/neighbor_num1/lrssl_1time/: test_metric1.csv  test_metric10.csv  test_metric2.csv  test_metric3.csv  test_metric4.csv  test_metric5.csv  test_metric6.csv  test_metric7.csv  test_metric8.csv  test_metric9.csv
