[tool.poetry]
name = "test-dgl-060"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
torch = "2.0.0"
torchvision = "0.15.1"
torchaudio = "2.0.1"
numpy = "1.26.4"
pydantic = "^2.8.2"
pyyaml = "^6.0.2"
dgl = {url = "https://data.dgl.ai/wheels/dgl-0.9.0-cp39-cp39-macosx_11_0_arm64.whl"}
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"

[[tool.poetry.source]]
name = "src_dgl"
url = "https://data.dgl.ai/wheels/repo.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
